[gd_scene load_steps=9 format=2]

[ext_resource path="res://normal.webm" type="VideoStream" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]
[ext_resource path="res://new_theme.tres" type="Theme" id=3]
[ext_resource path="res://pictures/scrol1.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.392157, 0.392157, 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pause/panel1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pause/panel2:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10, 30 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pause/panel2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 25, 5 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "pause"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pause/panel2:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 30 ), Vector2( 20, 30 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pause/panel2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 25, 5 ), Vector2( 15, 5 ) ]
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="move" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="videoplayer" type="VideoPlayer" parent="."]
margin_top = 40.0
margin_right = 1280.0
margin_bottom = 760.0
mouse_filter = 2
stream = ExtResource( 1 )
autoplay = true

[node name="panel" type="Panel" parent="videoplayer"]
margin_top = -40.0
margin_right = 1280.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="pause" type="TextureButton" parent="videoplayer/panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="panel1" type="Panel" parent="videoplayer/panel/pause"]
margin_left = 5.0
margin_top = 5.0
margin_right = 15.0
margin_bottom = 35.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="panel2" type="Panel" parent="videoplayer/panel/pause"]
margin_left = 25.0
margin_top = 5.0
margin_right = 35.0
margin_bottom = 35.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="line" type="HSlider" parent="videoplayer/panel"]
margin_left = 60.0
margin_right = 780.0
margin_bottom = 40.0
theme = ExtResource( 3 )
custom_icons/tick = ExtResource( 4 )
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 4 )
custom_icons/grabber = ExtResource( 4 )
max_value = 1.0
step = 0.0

[node name="minimize" type="TextureButton" parent="videoplayer/panel"]
margin_left = 1180.0
margin_right = 1220.0
margin_bottom = 40.0

[node name="panel" type="Panel" parent="videoplayer/panel/minimize"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -5.0
margin_right = 15.0
margin_bottom = 5.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="close" type="TextureButton" parent="videoplayer/panel"]
margin_left = 1240.0
margin_right = 1280.0
margin_bottom = 40.0

[node name="panel1" type="Panel" parent="videoplayer/panel/close"]
margin_left = 27.0
margin_top = 5.0
margin_right = 37.0
margin_bottom = 35.0
rect_rotation = 45.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="panel2" type="Panel" parent="videoplayer/panel/close"]
margin_left = 13.0
margin_top = 5.0
margin_right = 23.0
margin_bottom = 35.0
rect_rotation = -45.0
rect_scale = Vector2( -1, 1 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="animations" type="AnimationPlayer" parent="."]
root_node = NodePath("../videoplayer/panel")
anims/RESET = SubResource( 3 )
anims/pause = SubResource( 4 )

[connection signal="button_down" from="move" to="." method="_on_move_button_down"]
[connection signal="pressed" from="videoplayer/panel/pause" to="." method="_on_pause_pressed"]
[connection signal="gui_input" from="videoplayer/panel/line" to="." method="_on_line_gui_input"]
[connection signal="pressed" from="videoplayer/panel/minimize" to="." method="_on_minimize_pressed"]
[connection signal="pressed" from="videoplayer/panel/close" to="." method="_on_close_pressed"]
